--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,8 +5,8 @@ name: Manual workflow
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  repository_dispatch:
-#   workflow_dispatch:
+#   repository_dispatch:
+  workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
       name:
